--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -11,7 +11,31 @@
                           <div class="col-sm-4">
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/oc_lettings.png" width="100%">
-                            <p width="100%" class="link-dark">Mettez à l'échelle une application Django en utilisant une architecture modulaire</p>
+                            <p width="100%" class="link-dark">Mettre à l'échelle une application Django en utilisant une architecture modulaire</p>
+                            <p class="link-dark">
+                              <span><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-wrench" viewBox="0 0 16 16">
+                                <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
+                              </svg></span> Python, Django, Docker, CircleCi, Heroku, Sentry</p>
+                            </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/soft.png" width="100%" height="190px">
+                            <p width="100%" class="link-dark">Créez une API sécurisée RESTful en utilisant Django REST</p>
+                            <p class="link-dark"><br>
+                              <span><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-wrench" viewBox="0 0 16 16">
+                                <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
+                              </svg></span> Python, Django, Django REST framework</p>
+                          </a>
+                          </div>
+                          <div class="col-sm-4">
+                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
+                            <img src="../../static/img/litreview.png" width="100%" height="190px">
+                            <p width="100%" class="link-dark">Développez une application Web en utilisant Django</p>
+                            <p class="link-dark"><br>
+                              <span><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-wrench" viewBox="0 0 16 16">
+                                <path d="M.102 2.223A3.004 3.004 0 0 0 3.78 5.897l6.341 6.252A3.003 3.003 0 0 0 13 16a3 3 0 1 0-.851-5.878L5.897 3.781A3.004 3.004 0 0 0 2.223.1l2.141 2.142L4 4l-1.757.364L.102 2.223zm13.37 9.019.528.026.287.445.445.287.026.529L15 13l-.242.471-.026.529-.445.287-.287.445-.529.026L13 15l-.471-.242-.529-.026-.287-.445-.445-.287-.026-.529L11 13l.242-.471.026-.529.445-.287.287-.445.529-.026L13 11l.471.242z"/>
+                              </svg></span> Python, Django</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
@@ -24,18 +48,6 @@
                             <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
                             <img src="../../static/img/gudlft.png" width="100%">
                             <p width="100%" class="link-dark">Améliorez une application Web Python par des tests et du débogage</p>
-                            </a>
-                          </div>
-                          <div class="col-sm-4">
-                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/soft.png" width="100%">
-                            <p width="100%" class="link-dark">Créez une API sécurisée RESTful en utilisant Django REST</p>
-                            </a>
-                          </div>
-                          <div class="col-sm-4">
-                            <a href="{% url 'blog' blog_id=1 %}" style="text-decoration: none; ">
-                            <img src="../../static/img/litreview.png" width="100%">
-                            <p width="100%" class="link-dark">Développez une application Web en utilisant Django</p>
                             </a>
                           </div>
                           <div class="col-sm-4">
