--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -49,7 +49,7 @@
                 </div>
                 <!-- Center col -->
                 <div class="col-md-6">
-                    <h2 style="font-size:x-large">Réalisation</h2>
+                    <h2 style="font-size:x-large">Réalisations</h2>
                     <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">My-Portfolio</h3>
                         <p>Mon portfolio personnel https://alpha-mavamalonga.herokuapp.com/ qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
