--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -33,31 +33,52 @@
                               </div>
                             
                               <!-- The Modal -->
-                              <div class="modal" id="myModal">
-                                <div class="modal-dialog">
+                              <!-- Large modal -->
+                              <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-lg">
                                   <div class="modal-content">
-                                  
                                     <!-- Modal Header -->
                                     <div class="modal-header">
-                                      <h4 class="modal-title">Modal Heading</h4>
+                                      <h4 class="modal-title">OC Lettings</h4>
                                       <button type="button" class="close" data-dismiss="modal">&times;</button>
                                     </div>
-                                    
-                                    <!-- Modal body -->
-                                    <div class="modal-body">
-                                      Modal body..
+                                    <div class="row">
+                                      <div class="col-md-6">
+                                        <!-- Modal body -->
+                                        <div class="modal-body" width="hei">
+                                          <img src="../../static/img/oc_lettings.png" width="100%">
+                                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                        </div>
+                                      </div>
+                                      <div class="col-md-6">
+                                        <!-- Modal body -->
+                                        <div class="modal-body" width="hei">
+                                          <h5>Fonctionnalités</h5>
+                                          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                          <br><br>
+                                          <h5>Compétences</h5>
+                                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et laborum, molestiae voluptates dicta sit quidem quaerat sed aperiam facilis dignissimos quas voluptas nostrum? Incidunt ipsa sed non harum maxime quod!</p>
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                            <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                                            <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                                          </svg>
+                                          <br>
+                                          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                            <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                          </svg>
+                                        </div>
+                                      </div>
                                     </div>
-                                    
+                                
                                     <!-- Modal footer -->
                                     <div class="modal-footer">
                                       <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
                                     </div>
-                                    
                                   </div>
                                 </div>
                               </div>
-                            </div>
 
+                            </div>
                           </div>
 
                           <div class="col-sm-4">
@@ -455,16 +476,20 @@
                 </div>
                 <!-- Right col-->
                 <div class="col-md-3">
-                    <h2 class="" style="font-size:x-large;">Catégories</h2>
-                    <div class="" style="margin-bottom: 10px;">
-                      <ul style="list-style: none;">
-                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Astuces</a></span><br></li>
-                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Développement</a></span><br></li>
-                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Événements</a></span><br></li>
-                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Blockchain</a></span><br></li>
-                        <li><span style="list-style-type: none; margin-left: 3px;"><a href="#">Divers</a></span><br></li>
-                      </ul>
+                  <div class="container">
+                    <div class="list-group">
+                      <button type="button" class="list-group-item list-group-item-action disabled"><h4>Filter</h4></button>
+                      <button type="button" class="list-group-item list-group-item-action active">Python
+                        <span class="badge badge-primary badge-pill" style="float:right;">14</span>
+                      </button>
+                      <button type="button" class="list-group-item list-group-item-action">Django
+                        <span class="badge badge-primary badge-pill" style="float:right;">14</span>
+                      </button>
+                      <button type="button" class="list-group-item list-group-item-action">JavaScript</button>
+                      <button type="button" class="list-group-item list-group-item-action">React.js</button>
+                      <button type="button" class="list-group-item list-group-item-action">Flask</button>
                     </div>
+                  </div>
                 </div>
             </div>
         </div>
