--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -2,7 +2,7 @@
 {% block content %}
     <!-- Main -->
     <div class="container-fluid">
-        <div class="container">
+        <div class="container bg-light">
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-9">
