--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -49,36 +49,19 @@
                 </div>
                 <!-- Center col -->
                 <div class="col-md-6">
-                    <h2 style="font-size:x-large">Réalisations</h2>
-                    <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                        <h3 style="font-size:large; color: #ff9c00;">My-Portfolio</h3>
-                        <p>Mon portfolio personnel https://alpha-mavamalonga.herokuapp.com/ qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
-                        <span>Mes fonctions :</span></p>
-                        <ul style="margin-top: -2%; padding-bottom: 10px;">
-                            <li>Développer une application web en utilisant Django</li>
-                            <li>Développer la partie Front-End d’une application avec HTML, CSS et JavaScript</li>
-                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
-                            <li>Implémentee une suite de tests Python</li>
-                            <li>Mettre en place un intérface graphique CRM</li>
-                            <li>Déployer une application en utilisant Heroku</li>
-                        </ul>
+                    <div class="container bg-light">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">À propos de moi</h5>
+                            <small class="text-muted">3 days ago</small>
+                          </div>
+                          <p class="mb-1">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique, et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football. Je vous souhaite la bienvenue sur mon site personnel.
+
+                            C’est ici que je partage les péripéties de ma vie de développeur, la veille que je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.
+                            
+                            J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez juste me dire bonjour ou me payer un café, n’hésitez pas à me contacter.</p>
+                          <small class="text-muted">Donec id elit non mi porta.</small>
                     </div>
-                    <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
-                        <h3 style="font-size:large; color: #ff9c00;">Football Club ASL</h3>
-                        <p>Application web pour un club de football. (projet en cours de développement)<br>
-                        <span>Mes fonctions :</span></p>
-                        <ul style="margin-top: -2%; padding-bottom: 10px;">
-                            <li>Rédigez les spécifications détaillées d'un projet</li>
-                            <li>Mettre en oeuvre une base de données sécurisée avec Django ORM et PostgreSQL</li>
-                            <li>Créer une API RESTful avec Django REST</li>
-                            <li>Sécuriser une API afin qu'elle respecte les normes OWASP et RGPD</li>
-                            <li>Appliquez une architecture modulaire dans une application Python</li>
-                            <li>Mettre en place un système de contrôle des codes en utilisant Sentry</li>
-                            <li>Gérer la production de code en utilisant la méthodologie CI/CD avec CircleCi</li>
-                            <li>Déployer une application en utilisant Heroku</li>
-                        </ul>
-                    </div>
-                    <h2 style="font-size:x-large;">Formations</h2>
+                    <br>
                     <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h3>
                         <b>Paris - 2020 à 2022</b>
