--- a/blog/templates/blog/blogs.html
+++ b/blog/templates/blog/blogs.html
@@ -479,7 +479,7 @@
                   <div class="container">
                     <div class="list-group">
                       <button type="button" class="list-group-item list-group-item-action disabled"><h4>Filter</h4></button>
-                      <button type="button" class="list-group-item list-group-item-action active">Python
+                      <button type="button" class="list-group-item list-group-item-action">Python
                         <span class="badge badge-primary badge-pill" style="float:right;">14</span>
                       </button>
                       <button type="button" class="list-group-item list-group-item-action">Django
