--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -36,9 +36,11 @@
                             </div>
                         </div>
                         <hr>
-                        <h3 style="font-size: x-large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">À propos de moi</h3>
+                        <h5>Savoir-être</h5>
                         <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
-                            et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football.
+                           <h6>Une passion pour relever des challenges</h6>
+                           Je m'investis d'autant plus dans un projet,si celui-ci présente des aspects novateurs et apporte une vision nouvelle des problèmes qu'il tente de résoudre. Le "déjà fait" ou le "déjà vu" m'intéresse uniquement si il propose une amélioration par rapport à l'existant. Tout ce qui est nouveau dans les domaines que j'apprécie me passionne et me donne envie de m'investir pour développer ce milieu.
+                           <br>
                            Je vous souhaite la bienvenue sur mon site personnel. <br><br>
                            C’est ici que je partage les péripéties de ma vie de développeur, la veille que 
                            je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
@@ -49,16 +51,160 @@
                 </div>
                 <!-- Center col -->
                 <div class="col-md-6">
+                    <div class="container" width="100%">
+                        <div class="card" style="width: 100%;">
+                          <div class="card-body">
+                            <h5>OC Lettings</h5>
+                            <!-- Badges -->
+                            <div>
+                              <span class="badge badge-primary">Python</span>
+                              <span class="badge badge-secondary">Django</span>
+                              <span class="badge badge-success">Docker</span>
+                              <span class="badge badge-danger">CircleCi</span>
+                              <span class="badge badge-warning">Heroku</span>
+                              <span class="badge badge-info">Sentry</span>
+                            </div>
+                            <p>Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
+                            </p>
+                           
+                            <!-- Button to Open the Modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                              Voir plus 
+                            </button>
+                          </div>
+                        </div>
+                      
+                        <!-- The Modal -->
+                        <!-- Large modal -->
+                        <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                              <!-- Modal Header -->
+                              <div class="modal-header">
+                                <h4 class="modal-title">OC Lettings</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              </div>
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <!-- Modal body -->
+                                  <div class="modal-body" width="hei">
+                                    <img src="../../static/img/oc_lettings.png" width="100%">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                  </div>
+                                </div>
+                                <div class="col-md-6">
+                                  <!-- Modal body -->
+                                  <div class="modal-body" width="hei">
+                                    <h5>Fonctionnalités</h5>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                    <br><br>
+                                    <h5>Compétences</h5>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et laborum, molestiae voluptates dicta sit quidem quaerat sed aperiam facilis dignissimos quas voluptas nostrum? Incidunt ipsa sed non harum maxime quod!</p>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                      <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                                      <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                                    </svg>
+                                    <br>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                          
+                              <!-- Modal footer -->
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+
+                      <div class="container" width="100%">
+                        <div class="card" style="width: 100%;">
+                          <div class="card-body bg-light">
+                            <h5>OC Lettings</h5>
+                            <!-- Badges -->
+                            <div>
+                              <span class="badge badge-primary">Python</span>
+                              <span class="badge badge-secondary">Django</span>
+                              <span class="badge badge-success">Docker</span>
+                              <span class="badge badge-danger">CircleCi</span>
+                              <span class="badge badge-warning">Heroku</span>
+                              <span class="badge badge-info">Sentry</span>
+                            </div>
+                            <p>Mon portfolio personnel qui présente certains de mes projets github ainsi que mon CV et mes compétences techniques.<br>
+                            </p>
+                           
+                            <!-- Button to Open the Modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                              Voir plus 
+                            </button>
+                          </div>
+                        </div>
+                      
+                        <!-- The Modal -->
+                        <!-- Large modal -->
+                        <div class="modal fade bd-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                          <div class="modal-dialog modal-lg">
+                            <div class="modal-content">
+                              <!-- Modal Header -->
+                              <div class="modal-header">
+                                <h4 class="modal-title">OC Lettings</h4>
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                              </div>
+                              <div class="row">
+                                <div class="col-md-6">
+                                  <!-- Modal body -->
+                                  <div class="modal-body" width="hei">
+                                    <img src="../../static/img/oc_lettings.png" width="100%">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                  </div>
+                                </div>
+                                <div class="col-md-6">
+                                  <!-- Modal body -->
+                                  <div class="modal-body" width="hei">
+                                    <h5>Fonctionnalités</h5>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut culpa tempora rem voluptatum dignissimos laborum nam accusantium exercitationem quidem molestias, debitis tenetur sed, placeat qui nostrum? Quis atque quisquam aliquam.
+                                    <br><br>
+                                    <h5>Compétences</h5>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et laborum, molestiae voluptates dicta sit quidem quaerat sed aperiam facilis dignissimos quas voluptas nostrum? Incidunt ipsa sed non harum maxime quod!</p>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-eye" viewBox="0 0 16 16">
+                                      <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"/>
+                                      <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"/>
+                                    </svg>
+                                    <br>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                      <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                                    </svg>
+                                  </div>
+                                </div>
+                              </div>
+                          
+                              <!-- Modal footer -->
+                              <div class="modal-footer">
+                                <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
+                      </div>
+                      <!--End Modal-->
+
+
+
                     <div class="container bg-light">
+
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">À propos de moi</h5>
                             <small class="text-muted">3 days ago</small>
                           </div>
-                          <p class="mb-1">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique, et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football. Je vous souhaite la bienvenue sur mon site personnel.
-
+                          <p class="mb-1">Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique, et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football. Je vous souhaite la bienvenue sur mon site personnel.
                             C’est ici que je partage les péripéties de ma vie de développeur, la veille que je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.
-                            
-                            J’espère que ça va vous plaire ! Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez juste me dire bonjour ou me payer un café, n’hésitez pas à me contacter.</p>
+                            J’espère que ça va vous plaire ! <br>Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez juste me dire bonjour ou me payer un café, n’hésitez pas à me contacter.</p>
                           <small class="text-muted">Donec id elit non mi porta.</small>
                     </div>
                     <br>
