--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- Main -->
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
                 <!-- Left col -->
                 <div class="col-md-3">
-                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%" style="margin-bottom: ;">
-                    <div class="" style="margin-top: 20px;">
+                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
+                    <div class="" style="margin-top: 20px; background-color: white;">
                         <h3 style="font-size: x-large; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">Me contacter</h3>
-                        <div class="row" style="">
+                        <div class="row">
                             <div class="col">
                                 <!-- Linkedin -->
                                 <a href="https://www.linkedin.com/in/alpha-mava-malonga/">
@@ -38,9 +38,6 @@
                         <hr>
                         <h5>Savoir-être</h5>
                         <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
-                           <h6>Une passion pour relever des challenges</h6>
-                           Je m'investis d'autant plus dans un projet,si celui-ci présente des aspects novateurs et apporte une vision nouvelle des problèmes qu'il tente de résoudre. Le "déjà fait" ou le "déjà vu" m'intéresse uniquement si il propose une amélioration par rapport à l'existant. Tout ce qui est nouveau dans les domaines que j'apprécie me passionne et me donne envie de m'investir pour développer ce milieu.
-                           <br>
                            Je vous souhaite la bienvenue sur mon site personnel. <br><br>
                            C’est ici que je partage les péripéties de ma vie de développeur, la veille que 
                            je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.<br><br>
@@ -51,8 +48,9 @@
                 </div>
                 <!-- Center col -->
                 <div class="col-md-6">
-                    <div class="container" width="100%">
-                        <div class="card" style="width: 100%;">
+                    <h5>Top Réalisation</h5>
+                    <div class="container" width="100%" style="margin-bottom: 10px;">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body">
                             <h5>OC Lettings</h5>
                             <!-- Badges -->
@@ -122,9 +120,9 @@
 
                       </div>
 
-                      <div class="container" width="100%">
-                        <div class="card" style="width: 100%;">
-                          <div class="card-body bg-light">
+                      <div class="container">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
+                          <div class="card-body" style="width: 100%;">
                             <h5>OC Lettings</h5>
                             <!-- Badges -->
                             <div>
@@ -194,21 +192,9 @@
                       </div>
                       <!--End Modal-->
 
-
-
-                    <div class="container bg-light">
-
-                        <div class="d-flex w-100 justify-content-between">
-                            <h5 class="mb-1">À propos de moi</h5>
-                            <small class="text-muted">3 days ago</small>
-                          </div>
-                          <p class="mb-1">Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique, et en dehors de ma passion pour l'informatique, j'aime jouer et parler de football. Je vous souhaite la bienvenue sur mon site personnel.
-                            C’est ici que je partage les péripéties de ma vie de développeur, la veille que je pratique au quotidien, quelques projets personnels et que je présente certains événements auxquels je participe.
-                            J’espère que ça va vous plaire ! <br>Si vous souhaitez bavarder, si vous avez des questions ou des remarques, si vous souhaitez juste me dire bonjour ou me payer un café, n’hésitez pas à me contacter.</p>
-                          <small class="text-muted">Donec id elit non mi porta.</small>
-                    </div>
                     <br>
-                    <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                    <h5 class="mb-1">Formations</h5>
+                    <div class="container" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: white;">
                         <h3 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h3>
                         <b>Paris - 2020 à 2022</b>
                         <p style="padding-bottom: 10px;">
@@ -217,14 +203,14 @@
                             Ce parcours forme à un métier de développeur back-end python en plus de python, on voit des technologies telles que le SQL, Javascript,
                             les conteneurs avec Docker, l'automatisation des tâches CI/CD avec Circle et Heroku.</p>
                     </div>
-                    <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                    <div class="container" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: white;">
                         <h3 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h3>
                         <b>Paris Saclay - 2017 à 2020</b>
                         <p style="padding-bottom: 10px;">Découverte de l'informatique.
                             La licence m'a apportée les bases de la programmation (les structures conditionnelles, les boucles, les variables),
                             j'ai écrit mes premières lignes de code avec le langage Processing, par la suite, j'ai fais de l'assembleur et des projets de modélisation en python.</p>
                     </div>
-                    <div class="container bg-light" style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+                    <div class="container" style="background-color: white; font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                         <h3 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h3>
                         <b>Lycée Maurice Eliot - 2014 à 2017</b>
                         <p style="padding-bottom: 10px;">Enseignement scientifique : mathématiques, algorithmes, physique chimie, SVT...<br>Initialisation à la programmation avec Casio Basic programming</p>
