--- a/vitrine/templates/vitrine/index.html
+++ b/vitrine/templates/vitrine/index.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
     <!-- Main -->
-    <div class="container-fluid">
+    <div class="container-fluid bg-light">
         <div class="container">
             <div class="row">
                 <!-- Left col -->
-                <div class="col-md-3">
-                    <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
-                    <div class="" style="margin-top: 20px;">
-                        <h5>Savoir-être</h5>
+                <div class="col-md-3">    
+                    <div class="container" style="margin-top: 20px; background-color: white;">
+                        <img src="../app/../../static/img/vitrine/me.jpg" width="100%">
+                        <h5>A propos de moi</h5>
                         <p style="font-size: smaller; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
                             Hello world ! Je suis Mava Malonga Alpha, j'ai 24 ans, je suis développeur informatique,
                            Je vous souhaite la bienvenue sur mon site personnel. 
@@ -25,7 +25,7 @@
                 <div class="col-md-6">
                     <h5>Top Réalisation</h5>
                     <div class="container" width="100%" style="margin-bottom: 10px;">
-                        <div class="card bg-light" style="width: 106%; margin-left: -3%;">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body">
                             <h5>OC Lettings</h5>
                             <!-- Badges -->
@@ -97,7 +97,7 @@
 
                       <div class="container">
                         <div class="card" style="width: 106%; margin-left: -3%;">
-                          <div class="card-body bg-light" style="width: 100%;">
+                          <div class="card-body" style="width: 100%;">
                             <h5>OC Lettings</h5>
                             <!-- Badges -->
                             <div>
@@ -170,7 +170,7 @@
                     <br>
                     <h5 class="mb-1">Formations</h5>
                     <div class="container" width="100%" style="margin-bottom: 10px;">
-                        <div class="card bg-light" style="width: 106%; margin-left: -3%;">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
                             <h5 style="font-size:large; color: #ff9c00;">Openclassrooms - Développeur d'application Python</h5>
                             <b>Paris - 2020 à 2022</b>
@@ -184,7 +184,7 @@
                         </div>
                     </div>
                     <div class="container" width="100%" style="margin-bottom: 10px;">
-                        <div class="card bg-light" style="width: 106%; margin-left: -3%;">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
                             <h5 style="font-size:large; color: #ff9c00;">Licence Science pour l'Ingénieur (SPI)</h5>
                             <b>Paris Saclay - 2017 à 2020</b>
@@ -196,7 +196,7 @@
                         </div>
                     </div>
                     <div class="container" width="100%" style="margin-bottom: 10px;">
-                        <div class="card bg-light" style="width: 106%; margin-left: -3%;">
+                        <div class="card" style="width: 106%; margin-left: -3%;">
                           <div class="card-body" style="font-size: smaller;">
                             <h5 style="font-size:large; color: #ff9c00;">Bac Scientifique (S)</h5>
                             <b>Paris Saclay - 2017 à 2020</b>
@@ -323,14 +323,14 @@
                             </div>
                         </div>
                     </div>
-                    <h2 style="font-size:x-large; margin-top: 25px;">Hobbies</h2>
-                    <div>
-                        <div class="container" style="margin-top: 30px;">
+                    <h5 style="margin-top: 30px;">Hobbies</h5>
+                    <div class="container" style="background-color: white;">
+                        <div class="container" style="margin-top: 10px;">
                             <div class="row">
-                                <div class="col-md-2">
+                                <div class="col-md-2" style="margin-top:20px;">
                                     <img src="../../static/img/vitrine/book.png" width="30px" height="30px">
                                 </div>
-                                <div class="col-md-10">
+                                <div class="col-md-10" style="margin-top: 20px;">
                                     <span style="font-size: medium; color: #ff9c00;">Lecture</span>
                                     <p style="font-size:smaller; margin-left: 3px">- Développement personnel<br>- Histoire<br>- Aventure<br>- Fantaisie</p>        
                                 </div>
